mapping full serieNumber from Brage